# DeZero

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: format_and_lint_py_files.yaml
dezero/: __init__.py  variable.py
dezero/core/: __init__.py  config.py  core.py  dataloader.py  dataset.py  layer.py  model.py  optimizer.py  parameter.py
dezero/datasets/: __init__.py  spiral.py
dezero/functions/: __init__.py  accuracy.py  add.py  broadcast_to_sum_to.py  clip.py  dropout.py  exp.py  function.py  functions.py  goldstein_price.py  linear.py  log.py  matmul.py  matyas.py  mean_squared_error.py  mul.py  reshape.py  rosenbrock.py  sigmoid.py  sin.py  softmax.py  sphere.py  square.py  sum.py  tanh.py  transpose.py  trigonometric.py
dezero/layers/: __init__.py  linear.py
dezero/models/: __init__.py  mlp.py
dezero/optimizers/: __init__.py  momentum_sgd.py  sgd.py
dezero/utils/: __init__.py  numerical_diff.py  reshape_sum_backward.py  visualize.py
steps/: step02.py  step03.py  step04.py  step06.py  step07.py
tests/: test_function.py  test_variable.py
tests/backprop/: test_backprop.py
tests/core/: test_add.py  test_config.py  test_function.py  test_mul.py  test_variable.py
tests/functions/: test_add.py  test_connect_functions.py  test_exp.py  test_function.py  test_mul.py  test_sin.py  test_square.py
tests/layers/: test_linear.py
tests/utils/: test_numerical_diff.py
