[tool.poetry]
name = "dezero"
version = "0.1.0"
description = ""
authors = ["onion <kosukekito38@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
